// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGrid tests should render correctly 1`] = `
<section>
  <h3
    className="title animate__animated animate__slideInRight"
  >
    sol
  </h3>
  <section
    className="image-grid"
  />
</section>
`;

exports[`GifGrid tests should render with mock change 1`] = `
<section>
  <h3
    className="title animate__animated animate__slideInRight"
  >
    luna
  </h3>
  <section
    className="image-grid"
  >
    <Suspense
      fallback={<Loader />}
      key="ass156"
    >
      <lazy
        gif="http://any.com.gif"
        id="ass156"
        link="http://any.com.any"
        title="title"
        webp_size={5695}
      />
    </Suspense>
  </section>
</section>
`;
